--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
         "@ionic-native/status-bar": "~4.11.0",
         "@ionic/storage": "2.1.3",
         "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.3.2.tgz",
+        "cordova-android": "7.0.0",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.1.2",
+        "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-whitelist": "^1.3.3",
         "info.protonet.imageresizer": "^0.1.1",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
@@ -41,8 +46,15 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-splashscreen": {},
-            "info.protonet.imageresizer": {}
-        }
+            "info.protonet.imageresizer": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-keyboard": {}
+        },
+        "platforms": [
+            "android"
+        ]
     },
     "config": {
         "ionic_copy": "./scripts/copy-mobiscroll-css.js"
