--- a/package.json
+++ b/package.json
@@ -11,32 +11,41 @@
         "lint": "ionic-app-scripts lint"
     },
     "dependencies": {
-        "@angular/animations": "5.2.11",
-        "@angular/common": "5.2.11",
-        "@angular/compiler": "5.2.11",
+        "@angular/animations": "^5.2.11",
+        "@angular/common": "^5.2.11",
+        "@angular/compiler": "^5.2.11",
         "@angular/compiler-cli": "5.2.11",
-        "@angular/core": "5.2.11",
-        "@angular/forms": "5.2.11",
+        "@angular/core": "^5.2.11",
+        "@angular/forms": "^5.2.11",
         "@angular/http": "5.2.11",
-        "@angular/platform-browser": "5.2.11",
-        "@angular/platform-browser-dynamic": "5.2.11",
-        "@ionic-native/calendar": "^4.14.0",
+        "@angular/platform-browser": "^5.2.11",
+        "@angular/platform-browser-dynamic": "^5.2.11",
+        "@angular/router": "^6.1.8",
         "@ionic-native/core": "~4.11.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/status-bar": "~4.11.0",
         "@ionic/storage": "2.1.3",
-        "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.3.2.tgz",
+        "@ng-bootstrap/ng-bootstrap": "^3.2.2",
+        "angular-calendar": "^0.26.1",
+        "angular-draggable-droppable": "^4.0.2",
+        "angular-resizable-element": "^3.2.2",
+        "angularx-flatpickr": "^6.1.0",
         "cordova-android": "7.0.0",
-        "cordova-plugin-calendar": "^5.1.2",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "core-js": "^2.5.7",
+        "date-fns": "^1.29.0",
+        "flatpickr": "^4.5.2",
         "info.protonet.imageresizer": "^0.1.1",
+        "intl": "^1.2.5",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
-        "rxjs": "5.5.11",
+        "rrule": "^2.5.5",
+        "rxjs": "^6.3.2",
+        "rxjs-compat": "^6.3.2",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.26"
     },
@@ -52,8 +61,7 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
             "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-calendar": {}
+            "cordova-plugin-ionic-keyboard": {}
         },
         "platforms": [
             "android"
