--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
         "@ionic-native/status-bar": "~4.11.0",
         "@ionic/storage": "2.1.3",
         "@ng-bootstrap/ng-bootstrap": "^3.2.2",
-        "angular-calendar": "^0.26.1",
         "angular-draggable-droppable": "^4.0.2",
         "angular-resizable-element": "^3.2.2",
         "angularx-flatpickr": "^6.1.0",
+        "cordova": "^8.0.0",
         "cordova-android": "7.0.0",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
@@ -51,6 +51,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.1.11",
+        "ionic": "4.1.2",
         "typescript": "~2.6.2"
     },
     "description": "An Ionic project",
