--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "^5.2.11",
         "@angular/platform-browser-dynamic": "^5.2.11",
         "@angular/router": "^6.1.8",
+        "@ionic-native/calendar": "^4.14.0",
         "@ionic-native/core": "~4.11.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/status-bar": "~4.11.0",
@@ -62,7 +63,8 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
             "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-calendar": {}
         },
         "platforms": [
             "android"
