--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/calendar": "^4.14.0",
         "@ionic-native/core": "~4.11.0",
         "@ionic-native/splash-screen": "~4.11.0",
+        "@ionic-native/sqlite": "^4.16.0",
         "@ionic-native/status-bar": "~4.11.0",
         "@ionic/storage": "2.1.3",
         "@ng-bootstrap/ng-bootstrap": "^3.2.2",
@@ -37,6 +38,7 @@
         "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.5.0",
         "core-js": "^2.5.7",
         "date-fns": "^1.29.0",
         "flatpickr": "^4.5.2",
@@ -64,7 +66,8 @@
             "cordova-plugin-device": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-calendar": {}
+            "cordova-plugin-calendar": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android"
