--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/router": "^6.1.8",
         "@ionic-native/calendar": "^4.14.0",
         "@ionic-native/core": "~4.11.0",
+        "@ionic-native/social-sharing": "^4.17.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/sqlite": "^4.16.0",
         "@ionic-native/status-bar": "~4.11.0",
@@ -38,6 +39,7 @@
         "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-x-socialsharing": "^5.4.1",
         "cordova-sqlite-storage": "^2.5.0",
         "core-js": "^2.5.7",
         "date-fns": "^1.29.0",
@@ -67,7 +69,8 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-calendar": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-x-socialsharing": {}
         },
         "platforms": [
             "android"
