--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@angular/router": "^6.1.8",
         "@ionic-native/calendar": "^4.14.0",
         "@ionic-native/core": "~4.11.0",
+        "@ionic-native/file": "^4.18.0",
+        "@ionic-native/file-transfer": "^4.18.0",
         "@ionic-native/social-sharing": "^4.17.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/sqlite": "^4.16.0",
@@ -35,6 +37,8 @@
         "cordova": "^8.0.0",
         "cordova-android": "7.0.0",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-file": "^6.0.1",
+        "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -70,7 +74,9 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-calendar": {},
             "cordova-sqlite-storage": {},
-            "cordova-plugin-x-socialsharing": {}
+            "cordova-plugin-x-socialsharing": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android"
