--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@angular/compiler": "^5.2.11",
         "@angular/compiler-cli": "5.2.11",
         "@angular/core": "^5.2.11",
+        "@angular/fire": "^5.1.1",
         "@angular/forms": "^5.2.11",
         "@angular/http": "5.2.11",
         "@angular/platform-browser": "^5.2.11",
@@ -47,6 +48,7 @@
         "cordova-sqlite-storage": "^2.5.0",
         "core-js": "^2.5.7",
         "date-fns": "^1.29.0",
+        "firebase": "^5.7.2",
         "flatpickr": "^4.5.2",
         "info.protonet.imageresizer": "^0.1.1",
         "intl": "^1.2.5",
