--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "@angular/platform-browser-dynamic": "^5.2.11",
         "@angular/router": "^6.1.8",
         "@ionic-native/calendar": "^4.14.0",
-        "@ionic-native/core": "~4.11.0",
+        "@ionic-native/core": "^4.20.0",
         "@ionic-native/file": "^4.18.0",
         "@ionic-native/file-transfer": "^4.18.0",
+        "@ionic-native/geolocation": "^5.4.0",
+        "@ionic-native/google-maps": "^4.21.0",
         "@ionic-native/social-sharing": "^4.17.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/sqlite": "^4.16.0",
@@ -37,17 +39,22 @@
         "angularx-flatpickr": "^6.1.0",
         "cordova": "^8.0.0",
         "cordova-android": "7.0.0",
+        "cordova-browser": "5.0.4",
+        "cordova-plugin-calendar": "~5.1.2",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
-        "cordova-plugin-ionic-keyboard": "^2.1.2",
-        "cordova-plugin-ionic-webview": "^2.1.0",
+        "cordova-plugin-geolocation": "^4.0.1",
+        "cordova-plugin-googlemaps": "^2.5.3",
+        "cordova-plugin-ionic-keyboard": "^2.1.3",
+        "cordova-plugin-ionic-webview": "^2.4.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-plugin-x-socialsharing": "^5.4.1",
         "cordova-sqlite-storage": "^2.5.0",
         "core-js": "^2.5.7",
         "date-fns": "^1.29.0",
+        "es6-promise-plugin": "^4.2.2",
         "firebase": "^5.7.2",
         "flatpickr": "^4.5.2",
         "info.protonet.imageresizer": "^0.1.1",
@@ -78,10 +85,15 @@
             "cordova-sqlite-storage": {},
             "cordova-plugin-x-socialsharing": {},
             "cordova-plugin-file-transfer": {},
-            "cordova-plugin-file": {}
+            "cordova-plugin-file": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-googlemaps": {
+                "API_KEY_FOR_ANDROID": "AIzaSyBAsrEzmOBMAegFZ8x1n3mpQUE8WeGu5nI"
+            }
         },
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ]
     },
     "config": {
